src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41197823-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - intron_variant
  putative_impact: LOW
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - Coding
    - ManeSelect
  rank:
    ord: 22
    total: 22
  hgvs_t: c.5468-4C>G
  hgvs_p: p.?
  tx_pos:
    ord: 5581
    total: 7088
  cds_pos:
    ord: 5468
    total: 5592
  protein_pos: ~
  distance: 4
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - intron_variant
  putative_impact: LOW
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - Coding
  rank:
    ord: 21
    total: 21
  hgvs_t: c.5327-4C>G
  hgvs_p: p.?
  tx_pos:
    ord: 5521
    total: 7028
  cds_pos:
    ord: 5327
    total: 5451
  protein_pos: ~
  distance: 4
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - intron_variant
  putative_impact: LOW
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - Coding
  rank:
    ord: 21
    total: 21
  hgvs_t: c.2156-4C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2175
    total: 3682
  cds_pos:
    ord: 2156
    total: 2280
  protein_pos: ~
  distance: 4
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - intron_variant
  putative_impact: LOW
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - Coding
  rank:
    ord: 21
    total: 21
  hgvs_t: c.2082-4C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2189
    total: 3696
  cds_pos:
    ord: 2082
    total: 2100
  protein_pos: ~
  distance: 4
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - splice_region_variant
    - intron_variant
  putative_impact: LOW
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - Coding
  rank:
    ord: 23
    total: 23
  hgvs_t: c.5531-4C>G
  hgvs_p: p.?
  tx_pos:
    ord: 5644
    total: 7151
  cds_pos:
    ord: 5531
    total: 5655
  protein_pos: ~
  distance: 4
  strand: -1
  messages: ~
