src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41277379-A-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 1
    total: 23
  hgvs_t: c.-111T>G
  hgvs_p: p.?
  tx_pos:
    ord: 3
    total: 7088
  cds_pos:
    ord: -111
    total: 5592
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  rank:
    ord: 1
    total: 22
  hgvs_t: c.-192T>G
  hgvs_p: p.?
  tx_pos:
    ord: 3
    total: 7028
  cds_pos:
    ord: -192
    total: 5451
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 1247
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  rank:
    ord: 1
    total: 22
  hgvs_t: c.-105T>G
  hgvs_p: p.?
  tx_pos:
    ord: 3
    total: 3696
  cds_pos:
    ord: -105
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  rank:
    ord: 1
    total: 24
  hgvs_t: c.-111T>G
  hgvs_p: p.?
  tx_pos:
    ord: 3
    total: 7151
  cds_pos:
    ord: -111
    total: 5655
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
