src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41277380-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - Coding
    - ManeSelect
  rank:
    ord: 1
    total: 23
  hgvs_t: c.-112C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2
    total: 7088
  cds_pos:
    ord: -112
    total: 5592
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - Coding
  rank:
    ord: 1
    total: 22
  hgvs_t: c.-193C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2
    total: 7028
  cds_pos:
    ord: -193
    total: 5451
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - Coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 1248
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - Coding
  rank:
    ord: 1
    total: 22
  hgvs_t: c.-106C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2
    total: 3696
  cds_pos:
    ord: -106
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - Coding
  rank:
    ord: 1
    total: 24
  hgvs_t: c.-112C>G
  hgvs_p: p.?
  tx_pos:
    ord: 2
    total: 7151
  cds_pos:
    ord: -112
    total: 5655
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
