src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41277383-A-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype: Coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype: Coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype: Coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 1251
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype: Coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: MODIFIER
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype: Coding
  rank: ~
  hgvs_t: ~
  hgvs_p: ~
  tx_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 2
  messages: ~

